# Streaming-Content-Intelligence

./: .gitignore  MTH522_Project_2_India_Unrest.ipynb  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/processed/: content_clusters.csv  country_catalog.csv  customer_rfm_segments.csv  genre_catalog.csv  model_metrics.json  monthly_revenue.csv  statistical_tests.json  summary_metrics.json  top_countries.csv  top_products.csv
notebooks/: applied_science_retail_analytics.ipynb  online_retail_statistics_project.ipynb  streaming_content_intelligence.ipynb
reports/: executive_summary.md
scripts/: analyze_online_retail.py  applied_science_retail_analysis.py  streaming_content_intelligence.py
tests/: test_outputs_exist.py  test_project_outputs.py
