[project]
name = "streaming-content-intelligence"
version = "0.1.0"
description = "Analytics, clustering, and predictive modeling on a global streaming catalog."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jupyter",
  "matplotlib",
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "seaborn",
]

[tool.setuptools]
py-modules = []
